--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.5</version>
+                <version>2.19.1</version>
                 <configuration>
                     <systemPropertyVariables>
                         <test.data.dir>${project.build.testSourceDirectory}/../data</test.data.dir>
@@ -43,30 +43,6 @@
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
-
-            <!-- Bundle -->
-            <!--
-            <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>appassembler-maven-plugin</artifactId>
-              <version>1.1-SNAPSHOT</version>
-              <executions>
-                <execution>
-                  <id>appassemble</id>
-                  <goals><goal>assemble</goal></goals>
-                  <phase>package</phase>
-                </execution>
-              </executions>
-              <configuration>
-                <programs>
-                  <program>
-                    <mainClass>Crunch</mainClass>
-                    <name>crunch</name>
-                  </program>
-                </programs>
-              </configuration>
-            </plugin>
-            -->
 
             <!-- Better - uses the Assembly plugin with built-in jar-with-dependencies descriptor.
                    mvn install assembly:assembly
@@ -91,22 +67,8 @@
                 </configuration>
             </plugin>
 
-            <!-- Dependencies to lib/ . -->
-            <!--
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-dependency-plugin</artifactId>
-              <configuration>
-                <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                <includeScope>runtime</includeScope>
-              </configuration>
-            </plugin>
-            -->
-
         </plugins>
     </build>
-
-
 
 
     <pluginRepositories>
@@ -123,12 +85,14 @@
     </pluginRepositories>
 
 
+    <!--
     <repositories>
         <repository>
             <id>ondrazizka</id>
             <url>http://ondrazizka.googlecode.com/svn/maven</url>
         </repository>
     </repositories>
+    -->
 
 
     <dependencyManagement>
@@ -148,18 +112,18 @@
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
-            <version>2.0.0</version>
+            <version>2.3.4</version>
         </dependency>
 
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.5</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
+            <version>2.5</version>
         </dependency>
 
         <!--
@@ -173,7 +137,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
 
