--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>cz.dynawest.csvcruncher</groupId>
     <artifactId>CsvCruncher</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.1</version>
     <name>CsvCruncher</name>
 
     <properties>
