--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,36 @@
             <version>2.6</version>
         </dependency>
 
+        <!-- Just for the JSON encoding. 355 kB.
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
+        </dependency>
+         -->
+
+        <!-- Just for the JSON encoding. 16 kB. -->
+        <!-- Not used now, as we use javax.json, see below.
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1</version>
+        </dependency>
+        -->
+
+        <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.json</artifactId>
+            <version>1.0.4</version>
+        </dependency>
+
+
+
         <!--
         <dependency>
             <groupId>cz.dynawest.lib</groupId>
@@ -200,6 +230,5 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 </project>
