--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>cz.dynawest.csvcruncher</groupId>
     <artifactId>CsvCruncher</artifactId>
-    <packaging>jar</packaging>
-    <version>1.2.1</version>
+    <version>1.3.0</version>
+
     <name>CsvCruncher</name>
+    <description>Treats CSV files as SQL tables, and exports SQL SELECTs back to CSV or JSON.</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
