Fixed test params in POM

--- a/pom.xml
+++ b/pom.xml
@@ -128,14 +128,14 @@
                             <executable>java</executable>
                             <commandlineArgs>
                                 ${jvm.args.debug} -jar ${project.build.directory}/${project.build.finalName}-single.jar
+                                --json=entries
+                                --rowNumbers
+                                --combineInputs
                                 -in src/test/data/eapBuilds.csv
                                 -out target/results/result.csv
                                 -sql 'SELECT jobName, buildNumber, config, ar, arFile, deployDur, warmupDur, scale,
                                 CAST(warmupDur AS DOUBLE) / CAST(deployDur AS DOUBLE) AS warmupSlower
                                 FROM eapBuilds ORDER BY deployDur'
-                                --json=entries
-                                --rowNumbers
-                                --joinInputs
                             </commandlineArgs>
                         </configuration>
                     </execution>
