--- a/src/main/java/cz/dynawest/logging/logging-default.properties
+++ b/src/main/java/cz/dynawest/logging/logging-default.properties
@@ -3,8 +3,9 @@ handlers = java.util.logging.ConsoleHandler java.util.logging.FileHandler
 
 
 # Console
-#java.util.logging.ConsoleHandler.formatter = cz.dynawest.logging.SimplestFormatter
+# The logging of the app actually reacts to this line.
 java.util.logging.ConsoleHandler.formatter = cz.dynawest.logging.SingleLineFormatter
+#java.util.logging.ConsoleHandler.formatter = cz.dynawest.logging.SimplestFormatter
 java.util.logging.ConsoleHandler.level = ALL
 
 
@@ -20,7 +21,11 @@ java.util.logging.FileHandler.append = true
 .formatter = cz.dynawest.logging.SimplestFormatter
 .level = INFO
 
-
+#global.formatter = cz.dynawest.logging.SimplestFormatter
+#root.formatter = cz.dynawest.logging.SimplestFormatter
+#cz.dynawest.csvcruncher.App.formatter = cz.dynawest.logging.SimplestFormatter
+#cz.dynawest.csvcruncher.App.handlers = java.util.logging.ConsoleHandler
+#.useParentHandlers = false
 
 
 # Various customizations.
