Add a test with --combineInputs

--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,26 @@
                         <phase>integration-test</phase>
                         <goals><goal>exec</goal></goals>
                         <configuration>
+                            <skip>true</skip>
+                            <executable>java</executable>
+                            <commandlineArgs>
+                                ${jvm.args.debug} -jar ${project.build.directory}/${project.build.finalName}-single.jar
+                                --json=entries
+                                --rowNumbers
+                                -in src/test/data/eapBuilds.csv
+                                -out target/results/result.csv
+                                -sql 'SELECT jobName, buildNumber, config, ar, arFile, deployDur, warmupDur, scale,
+                                CAST(warmupDur AS DOUBLE) / CAST(deployDur AS DOUBLE) AS warmupSlower
+                                FROM eapBuilds ORDER BY deployDur'
+                            </commandlineArgs>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>testCrunch-combineInputFile</id>
+                        <phase>integration-test</phase>
+                        <goals><goal>exec</goal></goals>
+                        <configuration>
+                            <skip>false</skip>
                             <executable>java</executable>
                             <commandlineArgs>
                                 ${jvm.args.debug} -jar ${project.build.directory}/${project.build.finalName}-single.jar
