--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,7 @@
                                 -out target/results/result.csv
                                 -sql 'SELECT jobName, buildNumber, config, ar, arFile, deployDur, warmupDur, scale,
                                 CAST(warmupDur AS DOUBLE) / CAST(deployDur AS DOUBLE) AS warmupSlower
-                                FROM eapBuilds ORDER BY deployDur'
+                                FROM concat_1 ORDER BY deployDur'
                             </commandlineArgs>
                         </configuration>
                     </execution>
