More attempts to make logging behave.

--- a/src/main/java/cz/dynawest/logging/logging-default.properties
+++ b/src/main/java/cz/dynawest/logging/logging-default.properties
@@ -32,3 +32,10 @@ java.util.logging.FileHandler.append = true
 
 org.apache.commons.beanutils.converters.level=INFO
 
+org.hsqldb.persist.Logger.useParentHandlers = false
+org.hsqldb.persist.Logger.handlers = java.util.logging.ConsoleHandler
+org.hsqldb.persist.Logger.level = WARNING
+
+hsqldb.db.useParentHandlers = false
+hsqldb.db.handlers = java.util.logging.ConsoleHandler
+hsqldb.db.level = WARNING
