--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Try run it. -->
+            <!-- Try running it. -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -156,7 +156,7 @@
                                 -out target/results/result.csv
                                 -sql 'SELECT jobName, buildNumber, config, ar, arFile, deployDur, warmupDur, scale,
                                 CAST(warmupDur AS DOUBLE) / CAST(deployDur AS DOUBLE) AS warmupSlower
-                                FROM concat_1 ORDER BY deployDur'
+                                FROM concat ORDER BY deployDur'
                             </commandlineArgs>
                         </configuration>
                     </execution>
@@ -165,7 +165,7 @@
                         <phase>integration-test</phase>
                         <goals><goal>exec</goal></goals>
                         <configuration>
-                            <skip>true</skip>
+                            <skip>false</skip>
                             <executable>java</executable>
                             <commandlineArgs>
                                 ${testRunCmd}
@@ -176,7 +176,7 @@
                                 -in src/test/data/sampleMultiFilesPerDir/apollo_session/
                                 -out target/results/result.csv
                                 -sql 'SELECT session_uid, name, session_type, created_time, modified_date
-                                FROM concat_1 ORDER BY session_type, created_time DESC'
+                                FROM concat ORDER BY session_type, created_time DESC'
                             </commandlineArgs>
                         </configuration>
                     </execution>
