--- a/pom.xml
+++ b/pom.xml
@@ -165,7 +165,7 @@
                         <phase>integration-test</phase>
                         <goals><goal>exec</goal></goals>
                         <configuration>
-                            <skip>true</skip>
+                            <skip>false</skip>
                             <executable>java</executable>
                             <commandlineArgs>
                                 ${testRunCmd}
@@ -194,11 +194,12 @@
                                 -in src/test/data/sampleMultiFilesPerDir/session_telephony_pins/
                                 -out target/results/session_telephony_pins.csv
                             </commandlineArgs>
-                            <!-- Suppress output. This will fail because the input files don't match. -->
+                            <!-- Suppress output. This will fail because the input files don't match.
                             <outputFile>${project.build.outputDirectory}/testOutput</outputFile>
                             <successCodes>
                                 <code>127</code>
                             </successCodes>
+                             -->
                         </configuration>
                     </execution>
                     <execution>
