--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,20 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.1</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <test.data.dir>${project.build.testSourceDirectory}/../data</test.data.dir>
+                        <target.dir>${project.build.directory}</target.dir>
+                        <textdb.allow_full_path>true</textdb.allow_full_path>
+                    </systemPropertyVariables>
+                </configuration>
+                <executions><execution><id>it</id><goals><goal>integration-test</goal></goals></execution></executions>
+            </plugin>
+
             <!-- Better - uses the Assembly plugin with built-in jar-with-dependencies descriptor.
                    mvn install assembly:assembly
             -->
